# eduquery-ai

./: .env.example  Dockerfile  README.md  TUTORIAL.md  docker-compose.yml  pyproject.toml  server.err  srv.err  test_intents.py  test_intents_api.bat  test_intents_http.py
app/: main.py
app/ai/: embedding_classifier.py  intent_extractor.py  keyword_classifier.py
app/api/: config.py  intents.py  query.py  webhook.py
app/core/: config.py  json_util.py
app/database/: base.py  bcare_client.py  bp_client.py  iboss_client.py  sqlite_client.py  voss_client.py
app/intents/: loader.py
app/llm/: client.py
app/queries/bp_batam/: executive_summary.py
app/services/: bp_database_service.py  bp_formatter_service.py  insight_service.py  reply_service.py
app/sql/: template_engine.py  validator.py
prompts/: insight_templates.json  intents.json  templates.json
scripts/: test_db_connections.py  test_deployed_full.py  test_edge_cases.py  test_needs_context.py  test_pl_debug.py  test_pl_filter.py  test_webhook_raw.py
static/: app.css  app.js  index.html  intents.html
tests/: conftest.py  test_api.py  test_intent.py  test_validator.py
