[project]
name = "biquery-ai"
version = "0.1.0"
description = "Sistem tanya-jawab database BP Batam Data Warehouse berbasis bahasa alami"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "oracledb>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]